k8s/base/infra/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx:1.27-alpine
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-cm0
              readOnly: true
              subPath: default.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: default.conf
            name: nginx-cm0
          name: nginx-cm0
