k8s/base/infra/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: redis
  name: redis
  namespace: shop-msa-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:7-alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: redis
      restartPolicy: Always
